@@ -7,7 +7,7 @@ Standards-Version: 3.9.2
 
 Package: zentyal-captiveportal
 Architecture: all
-Depends: zentyal-core (>= 3.2), zentyal-core (<< 3.3), zentyal-firewall, zentyal-users, libyaml-libyaml-perl, liblinux-inotify2-perl, libcrypt-rijndael-perl, conntrack, ${misc:Depends}
+Depends: zentyal-core (>= 3.2), zentyal-core (<< 3.3), zentyal-firewall (>= 3.2.3), zentyal-users, libyaml-libyaml-perl, liblinux-inotify2-perl, libcrypt-rijndael-perl, conntrack, ${misc:Depends}
 Description: Zentyal - Captive Portal
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
