@@ -1,3 +1,5 @@
+HEAD
+	+ Added EBox::Iptables::executeModuleRules to be able to execute
 3.2.2
 	+ Removed code made dead by new managament of DHCP nameservers
 3.2.1
